overflow fix

--- a/src/components/MomPage.css
+++ b/src/components/MomPage.css
@@ -26,7 +26,7 @@
 
 body {
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   
   .wrapper {
